--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,19 @@
 {
-"name": "kirchbergerknorr/fmeproductattachments",
-"description": "Product Attachments",
-"keywords": ["magento", "fme", "productattachments"],
-"homepage": "http://www.fmeextensions.com/",
-"type": "magento-module",
-"authors": [
-{
-"name": "FME Magento Extensions",
-"email": ""
-}
-],
-"require": {
-"magento-hackathon/magento-composer-installer": "*"
-}
+  "name": "kirchbergerknorr/fmeproductattachments",
+  "description": "Product Attachments",
+  "keywords": ["magento", "fme", "productattachments"],
+  "homepage": "http://www.fmeextensions.com/",
+  "type": "magento-module",
+  "authors": [
+    {
+      "name": "FME Magento Extensions"
+    },
+    {
+      "name": "Susanne Krieg",
+      "email": "sk@kirchbergerknorr.de"
+    }
+  ],
+  "require": {
+    "magento-hackathon/magento-composer-installer": "*"
+  }
 }
